# CAIAO

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
caiao/: README.md  __init__.py  _parallel.py  _state.py  discovery.py  hub.py  pyproject.toml  types.py
caiao/caiao/: __init__.py  _semantic.py  hub.py  types.py
caiao/caiao/cli/: main.py
caiao/caiao/templates/mcp_project/: caiao.yaml  gateway_main.py  requirements.txt
caiao/caiao/templates/server/: caiao.yaml
caiao/cli/: main.py
caiao/templates/lightweight_project/: caiao.yaml  main.py
caiao/templates/server/: server.py
caiao_lightweight/: README.md  __init__.py  hub.py  server.py  subprocess.py
docs/: GOVERNANCE.md  MANIFEST.yaml  README.md
docs/01-core-concepts/: CAIAO与MCP的关系.md  CAIAO概述.md  核心设计原则.md
docs/02-two-implementations/: MCP-SDK实现（拆除模拟器）.md  轻量实现的独特优势.md  轻量实现（钢框架设计）.md  适用场景对比与选择指南.md
docs/03-server-catalog/: Server种类说明.md  Server设计模式.md  全部Server清单.md  可复用代码模式.md
docs/04-caiao-yaml-system/: 清单规范.md
docs/05-dev-guides/: System-Prompt与工具发现设计指南.md  创建MCP-Server.md  创建轻量Server.md  前端集成模式.md  蒸馏方法论.md  贡献者指南.md
docs/06-iron-fall-reference/: StructureClaw蒸馏源参考.md  向CAIAO迁移的路径.md  项目概述.md
docs/07-protocol-reference/: CAIAO-Server规范v1.0-正式版.md  stdio通信协议.md  命名规范.md  契约规则.md
docs/08-evolution-history/: 合并路线图.md  (+1 more)
examples/: README.md
tests/: test_cli.py  test_discovery.py  test_hub.py  test_lightweight.py  test_parallel.py  test_semantic.py  test_state.py
visual_platform/: start.ps1
(+77 files in other folders)
