[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caiao"
version = "1.0.2"
description = "CAIAO — Server-as-atomic-unit framework for tool orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/LaobaiAi/CAIAO"
Repository = "https://github.com/LaobaiAi/CAIAO"

[project.scripts]
caiao = "caiao.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["caiao*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
